NetBSD Problem Report #54320

From www@netbsd.org  Sun Jun 23 21:17:08 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 794297A174
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 23 Jun 2019 21:17:08 +0000 (UTC)
Message-Id: <20190623211705.E6FA67A17F@mollari.NetBSD.org>
Date: Sun, 23 Jun 2019 21:17:05 +0000 (UTC)
From: tmp@bh0.amt.ru
Reply-To: tmp@bh0.amt.ru
To: gnats-bugs@NetBSD.org
Subject: kernel panic
X-Send-Pr-Version: www-1.0

>Number:         54320
>Category:       kern
>Synopsis:       kernel panic
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jun 23 21:20:00 +0000 2019
>Closed-Date:    Sat Jul 27 17:12:51 +0000 2019
>Last-Modified:  Sat Jul 27 17:15:00 +0000 2019
>Originator:     Alexei
>Release:        # $NetBSD: CHANGES-8.2,v 1.1.2.2 2019/06/02 08:30:16 martin Exp $
>Organization:
>Environment:
NetBSD 8.1_STABLE (GENERIC) #0: Sun Jun  2 08:30:16 UTC 2019  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/i386/compile/GENERIC i386

>Description:
# crash -M netbsd.0.core
Crash version 8.1_STABLE, image version 8.1_STABLE.
System panicked: trap
Backtrace from time of crash is available.
crash> dmesg
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017,
    2018, 2019 The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 8.1_STABLE (GENERIC) #0: Sun Jun  2 08:30:16 UTC 2019
        mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/i386/compile/GENERIC
total memory = 3327 MB
avail memory = 3253 MB
rnd: seeded with 128 bits
timecounter: Timecounters tick every 10.000 msec
Kernelized RAIDframe activated
running cgd selftest aes-xts-256 aes-xts-512 done
[439] nouveau* disabled
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
TOSHIBA TECRA M5 (PTM51E-02Z037RU)
mainbus0 (root)
ACPI: RSDP 0x00000000000F01E0 000014 (v00 TOSHIB)
ACPI: RSDT 0x00000000CFF90000 000040 (v01 TOSHIB A003B    20060821 TASM 04010000)
ACPI: FACP 0x00000000CFF90074 000084 (v02 TOSHIB A003B    20060821 TASM 04010000)
ACPI: DSDT 0x00000000CFF900F8 007577 (v02 TOSHIB A003B    20080124 MSFT 0100000E)
ACPI: FACS 0x00000000000EEE00 000040
ACPI: SSDT 0x00000000CFF9766F 000306 (v02 TOSHIB A003B    20060907 MSFT 0100000E)
ACPI: APIC 0x00000000CFF98227 000068 (v01 TOSHIB A003B    20060821 TASM 04010000)
ACPI: MCFG 0x00000000CFF9828F 00003C (v01 TOSHIB A003B    20060821 TASM 04010000)
ACPI: HPET 0x00000000CFF982CB 000038 (v01 TOSHIB A003B    20060821 TASM 04010000)
ACPI: SLIC 0x00000000CFF98335 000176 (v01 TOSHIB A003B    20060821 TASM 04010000)
ACPI: SSDT 0x00000000CFF984AB 000076 (v02 TOSHIB A003B    20060912 MSFT 0100000E)
ACPI: 3 ACPI AML tables successfully acquired and loaded
ACPI: Actual Package length (12) is larger than NumElements field (1), truncated
ioapic0 at mainbus0 apid 1: pa 0xfec00000, version 0x20, 24 pins
cpu0 at mainbus0 apid 0
cpu0: Genuine Intel(R) CPU           T2400  @ 1.83GHz, id 0x6e8
cpu0: package 0, core 0, smt 0
cpu1 at mainbus0 apid 1
cpu1: Genuine Intel(R) CPU           T2400  @ 1.83GHz, id 0x6e8
cpu1: package 0, core 1, smt 0
acpi0 at mainbus0: Intel ACPICA 20170303
acpi0: X/RSDT: OemId <TOSHIB,A003B   ,20060821>, AslId <TASM,04010000>
ACPI: Dynamic OEM Table Load:
ACPI: SSDT 0x00000000C4C48604 0000F3 (v02 TOSHIB A003B    20060907 MSFT 0100000E)
ACPI: Dynamic OEM Table Load:
ACPI: SSDT 0x00000000C4C52804 00034E (v02 TOSHIB A003B    20060907 MSFT 0100000E)
ACPI: Dynamic OEM Table Load:
ACPI: SSDT 0x00000000C4B2E484 000076 (v02 TOSHIB A003B    20060907 MSFT 0100000E)
ACPI: Dynamic OEM Table Load:
ACPI: SSDT 0x00000000C4B2E504 000079 (v02 TOSHIB A003B    20060907 MSFT 0100000E)
acpi0: SCI interrupting at int 9
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
MEM (PNP0C01) at acpi0 not configured
EXPL (PNP0C02) at acpi0 not configured
attimer1 at acpi0 (PIT, PNP0100): io 0x40-0x43 irq 0
pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
midi0 at pcppi1: PC speaker
sysbeep0 at pcppi1
NDP (PNP0C04) at acpi0 not configured
pckbc1 at acpi0 (KBC, PNP0303) (kbd port): io 0x60,0x64 irq 1
pckbc2 at acpi0 (PS2M, PNP0F13) (aux port): irq 12
SYSR (PNP0C02) at acpi0 not configured
TPM (IFX0102) at acpi0 not configured
COM (PNP0501) at acpi0 not configured
PRT (PNP0401) at acpi0 not configured
acpivga0 at acpi0 (VGA): ACPI Display Adapter
acpiout0 at acpivga0 (LCD, 0x0110): ACPI Display Output Device
acpiout0: brightness levels: [10,15,30,40,55,65,80,100]
acpiout1 at acpivga0 (CRT, 0x0100): ACPI Display Output Device
acpiout2 at acpivga0 (TV, 0x0200): ACPI Display Output Device
acpiout3 at acpivga0 (DVI, 0x0120): ACPI Display Output Device
acpivga0: connected output devices:
acpivga0:   0x0110 (acpiout0): LCD Panel, head 0
acpivga0:   0x0100 (acpiout1): Ext. Monitor, head 0
acpivga0:   0x0200 (acpiout2): TV, head 0
acpivga0:   0x0120 (acpiout3): Unknown Output Device, head 0
BT (TOS6205) at acpi0 not configured
acpilid0 at acpi0 (LID, PNP0C0D): ACPI Lid Switch
acpibat0 at acpi0 (BAT1, PNP0C0A-1): ACPI Battery
acpibat1 at acpi0 (BAT2, PNP0C0A-2): ACPI Battery
acpibut0 at acpi0 (PWRB, PNP0C0C): ACPI Power Button
acpiacad0 at acpi0 (ADP1, ACPI0003): ACPI AC Adapter
valz0 at acpi0 (VALZ, TOS6208): Toshiba VALZ
HAPS (TOS620A) at acpi0 not configured
acpidalb0 at acpi0 (HS87, PNP0C32-1): Direct Application Launch Button
acpidalb1 at acpi0 (HS86, PNP0C32-2): Direct Application Launch Button
acpitz0 at acpi0 (THRM)
acpitz0: levels: critical 102.0 C, passive cooling
apm0 at acpi0: Power Management spec V1.2
ACPI: Enabled 2 GPEs in block 00 to 1F
attimer1: attached to pcppi1
pckbd0 at pckbc1 (kbd slot)
pckbc1: using irq 1 for kbd slot
wskbd0 at pckbd0: console keyboard
pms0 at pckbc1 (aux slot)
pckbc1: using irq 12 for aux slot
wsmouse0 at pms0 mux 0
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0: vendor 8086 product 27a0 (rev. 0x03)
agp0 at pchb0: can't find internal VGA config space
ppb0 at pci0 dev 1 function 0: vendor 8086 product 27a1 (rev. 0x03)
ppb0: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x16 @ 2.5GT/s
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
genfb0 at pci1 dev 0 function 0: vendor 10de product 01da (rev. 0xa1)
genfb0: framebuffer at 0xe0000000, size 1024x768, depth 16, stride 2048
wsdisplay0 at genfb0 kbdmux 1: console (default, vt100 emulation), using wskbd0
wsmux1: connecting to wsdisplay0
drm at genfb0 not configured
hdaudio0 at pci0 dev 27 function 0: HD Audio Controller
hdaudio0: interrupting at msi0 vec 0
hdafg0 at hdaudio0: vendor 8384 product 7690
hdafg0: DAC00 2ch: Speaker [Built-In]
hdafg0: ADC01 2ch: Line In [Jack], Mic In [Built-In]
hdafg0: 2ch/2ch 44100Hz 48000Hz 88200Hz 96000Hz 192000Hz PCM16 PCM20 PCM24 AC3
audio0 at hdafg0: full duplex, playback, capture, mmap, independent
hdafg0: Virtual format configured - Format SLINEAR, precision 16, channels 2, frequency 48000
hdafg0: Latency: 128 milliseconds
hdvsmfg at hdaudio0 not configured
ppb1 at pci0 dev 28 function 0: vendor 8086 product 27d0 (rev. 0x02)
ppb1: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci2 at ppb1 bus 2
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
wm0 at pci2 dev 0 function 0: Intel i82573L Gigabit Ethernet (rev. 0x00)
wm0: interrupting at msi1 vec 0
wm0: PCI-Express bus
wm0: 64 words (8 address bits) SPI EEPROM
wm0: ASPM L0s and L1 are disabled to workaround the errata.
wm0: Ethernet address 00:0e:7b:96:36:e0
wm0: 0x2a4440<SPI,IOH_VALID,PCIE,ASF_FIRM,AMT,WOL>
makphy0 at wm0 phy 1: Marvell 88E1111 Gigabit PHY, rev. 2
makphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
ppb2 at pci0 dev 28 function 1: vendor 8086 product 27d2 (rev. 0x02)
ppb2: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci3 at ppb2 bus 3
pci3: i/o space, memory space enabled, rd/line, wr/inv ok
ppb3 at pci0 dev 28 function 2: vendor 8086 product 27d4 (rev. 0x02)
ppb3: PCI Express capability version 1 <Root Port of PCI-E Root Complex> x1 @ 2.5GT/s
pci4 at ppb3 bus 5
pci4: i/o space, memory space enabled, rd/line, wr/inv ok
wpi0 at pci4 dev 0 function 0: vendor 8086 product 4222 (rev. 0x02)
wpi0: interrupting at msi2 vec 0
wpi0: MoW2, address 00:13:02:72:95:57
wpi0: 11a rates: 6Mbps 9Mbps 12Mbps 18Mbps 24Mbps 36Mbps 48Mbps 54Mbps
wpi0: 11b rates: 1Mbps 2Mbps 5.5Mbps 11Mbps
wpi0: 11g rates: 1Mbps 2Mbps 5.5Mbps 11Mbps 6Mbps 9Mbps 12Mbps 18Mbps 24Mbps 36Mbps 48Mbps 54Mbps
uhci0 at pci0 dev 29 function 0: vendor 8086 product 27c8 (rev. 0x02)
uhci0: interrupting at ioapic0 pin 23
usb0 at uhci0: USB revision 1.0
uhci1 at pci0 dev 29 function 1: vendor 8086 product 27c9 (rev. 0x02)
uhci1: interrupting at ioapic0 pin 19
usb1 at uhci1: USB revision 1.0
uhci2 at pci0 dev 29 function 2: vendor 8086 product 27ca (rev. 0x02)
uhci2: interrupting at ioapic0 pin 18
usb2 at uhci2: USB revision 1.0
uhci3 at pci0 dev 29 function 3: vendor 8086 product 27cb (rev. 0x02)
uhci3: interrupting at ioapic0 pin 16
usb3 at uhci3: USB revision 1.0
ehci0 at pci0 dev 29 function 7: vendor 8086 product 27cc (rev. 0x02)
ehci0: interrupting at ioapic0 pin 23
ehci0: EHCI version 1.0
ehci0: 4 companion controllers, 2 ports each: uhci0 uhci1 uhci2 uhci3
usb4 at ehci0: USB revision 2.0
ppb4 at pci0 dev 30 function 0: vendor 8086 product 2448 (rev. 0xe2)
pci5 at ppb4 bus 6
pci5: i/o space, memory space enabled
cbb0 at pci5 dev 11 function 0: vendor 104c product 8039 (rev. 0x00)
fwohci0 at pci5 dev 11 function 1: vendor 104c product 803a (rev. 0x00)
fwohci0: interrupting at ioapic0 pin 20
fwohci0: OHCI version 1.10 (ROM=1)
fwohci0: No. of Isochronous channels is 4.
fwohci0: EUI64 00:00:39:00:00:ab:e6:a1
fwohci0: Phy 1394a available S400, 3 ports.
fwohci0: Link S400, max_rec 2048 bytes.
ieee1394if0 at fwohci0: IEEE1394 bus
fwip0 at ieee1394if0: IP over IEEE1394
fwohci0: Initiate bus reset
fwohci0: Clear PME# now
sdhc0 at pci5 dev 11 function 3: vendor 104c product 803c (rev. 0x00)
sdhc0: interrupting at ioapic0 pin 23
sdhc0: SDHC 1.0, rev 137, SDMA, 48000 kHz, 3.3V, 512 byte blocks
sdmmc0 at sdhc0 slot 0
cbb0: cacheline 0x8 lattimer 0x40
cbb0: bhlc 0x824008
cbb0: interrupting at ioapic0 pin 21
cardslot0 at cbb0
cardbus0 at cardslot0: bus 7
pcmcia0 at cardslot0
ichlpcib0 at pci0 dev 31 function 0: vendor 8086 product 27b9 (rev. 0x02)
timecounter: Timecounter "ichlpcib0" frequency 3579545 Hz quality 1000
ichlpcib0: 24-bit timer
tco0 at ichlpcib0: TCO (watchdog) timer configured.
tco0: Min/Max interval 1/367 seconds
piixide0 at pci0 dev 31 function 2: Intel 82801GBM/GHM Serial ATA Controller (ICH7) (rev. 0x02)
piixide0: bus-master DMA support present
piixide0: primary channel wired to compatibility mode
piixide0: primary channel interrupting at ioapic0 pin 14
atabus0 at piixide0 channel 0
piixide0: secondary channel wired to compatibility mode
piixide0: secondary channel interrupting at ioapic0 pin 15
atabus1 at piixide0 channel 1
isa0 at ichlpcib0
lpt0 at isa0 port 0x378-0x37b irq 7
tpm0 at isa0 iomem 0xfed40000-0xfed44fff irq 7: IFX SLB 9635 TT 1.2 rev 0x10
com0 at isa0 port 0x3f8-0x3ff irq 4: ns16550a, working fifo
acpicpu0 at cpu0: ACPI CPU
acpicpu0: C1: FFH, lat   1 us, pow  1000 mW
acpicpu0: C2: I/O, lat   1 us, pow   500 mW
acpicpu0: C3: I/O, lat  57 us, pow   100 mW
acpicpu0: P0: FFH, lat  10 us, pow 27000 mW, 1830 MHz
coretemp0 at cpu0: thermal sensor, 1 C resolution, Tjmax=100
acpicpu1 at cpu1: ACPI CPU
coretemp1 at cpu1: thermal sensor, 1 C resolution, Tjmax=100
fwohci0: BUS reset
fwohci0: node_id=0xc000ffc0, gen=1, CYCLEMASTER mode
ieee1394if0: 1 nodes, maxhop <= 0 cable IRM irm(0) (me)
ieee1394if0: bus manager 0
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
acpiacad0: AC adapter online.
IPsec: Initialized Security Association Processing.
uhub0 at usb0: vendor 8086 (0x8086) UHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: vendor 8086 (0x8086) UHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub1: 2 ports with 2 removable, self powered
uhub2 at usb2: vendor 8086 (0x8086) UHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub2: 2 ports with 2 removable, self powered
uhub3 at usb3: vendor 8086 (0x8086) UHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub3: 2 ports with 2 removable, self powered
uhub4 at usb4: vendor 8086 (0x8086) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub4: 8 ports with 8 removable, self powered
uhidev0 at uhub0 port 1 configuration 1 interface 0
uhidev0: Logitech (0x46d) USB Laser Mouse (0xc069), rev 2.00/56.01, addr 2, iclass 3/1
ums0 at uhidev0: 8 buttons, W and Z dirs
wsmouse1 at ums0 mux 0
wd0 at atabus0 drive 0
wd0: <HTS541080G9SA00>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 76319 MB, 155061 cyl, 16 head, 63 sec, 512 bytes/sect x 156301488 sectors
ugen0 at uhub1 port 1
ugen0: STMicroelectronics (0x483) Biometric Coprocessor (0x2016), rev 1.00/0.01, addr 2
wd0: 32-bit data port
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 5 (Ultra/100)
wd0(piixide0:0:0): using PIO mode 4, Ultra-DMA mode 5 (Ultra/100) (using DMA)
atapibus0 at atabus1: 2 targets
cd0 at atapibus0 drive 0: <MATSHITADVD-RAM UJ-841S, , 1.21> cdrom removable
cd0: 32-bit data port
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 2 (Ultra/33)
cd0(piixide0:1:0): using PIO mode 4, Ultra-DMA mode 2 (Ultra/33) (using DMA)
WARNING: 1 error while detecting hardware; check system log.
boot device: wd0
root on wd0a dumps on wd0b
root file system type: ffs
kern.module.path=/stand/i386/8.1/modules
wsdisplay0: screen 1 added (default, vt100 emulation)
wsdisplay0: screen 2 added (default, vt100 emulation)
wsdisplay0: screen 3 added (default, vt100 emulation)
Accounting started
DEBUG: module: unload requested for 'pf' (FALSE)
DEBUG: module: cannot unload module `pf' error=16
nd6_setmtu0: new link MTU on tun4 (1194) is too small for IPv6 which needs 1280
nd6_setmtu0: new link MTU on tun4 (1194) is too small for IPv6 which needs 1280
nd6_setmtu0: new link MTU on tun4 (1194) is too small for IPv6 which needs 1280
fatal page fault in supervisor mode
trap type 6 code 0x2 eip 0xc02ce21d cs 0x8 eflags 0x210293 cr2 0x204 ilevel 0x6 esp 0x6
curlwp 0xc4b2fa80 pid 0 lid 3 lowest kstack 0xdc5cb2c0
panic: trap
cpu0: Begin traceback...
vpanic(c0f009c7,dc5cce78,dc5ccf00,c012088e,c0f009c7,dc5ccf0c,dc5ccf0c,3,dc5cb2c0,210293) at netbsd:vpanic+0x125
snprintf(c0f009c7,dc5ccf0c,dc5ccf0c,3,dc5cb2c0,210293,204,6,6,c08faaed) at netbsd:snprintf
trap() at netbsd:trap+0xc5f
--- trap (number 6) ---
wpi_softintr(c4f86000,0,c4b2fa80,0,1b2fd20,c4fec000,0,dc5cb000,dc5c9000,0) at netbsd:wpi_softintr+0x39c
softint_dispatch(c4b2fd20,4,ffffffff,ffffffff,ffffffff,ffffffff,dc5ceff0,dc5cef4c,c4fec000,80050033) at netbsd:softint_dispatch+0x7c
Bad frame pointer: 0xc4fec000
cpu0: End traceback...

dumping to dev 0,1 offset 26741239
dump
crash> 

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54320 CVS commit: src/sys/dev/pci
Date: Mon, 24 Jun 2019 13:57:31 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Mon Jun 24 13:57:31 UTC 2019

 Modified Files:
 	src/sys/dev/pci: if_wpi.c

 Log Message:
 Put back correct recieve ring allocation size which was lost just over
 five years ago mae culpa.

 Found by msaitoh@

 Should fix PR kern/54320 once pulled up.


 To generate a diff of this commit:
 cvs rdiff -u -r1.85 -r1.86 src/sys/dev/pci/if_wpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->needs-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 03 Jul 2019 18:22:31 +0000
State-Changed-Why:
fix needs to be in -8


State-Changed-From-To: needs-pullups->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 27 Jul 2019 17:12:51 +0000
State-Changed-Why:
Pullups done.
Thanks for the report!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54320 CVS commit: [netbsd-8] src/sys/dev/pci
Date: Sat, 27 Jul 2019 17:11:09 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Jul 27 17:11:09 UTC 2019

 Modified Files:
 	src/sys/dev/pci [netbsd-8]: if_wpi.c

 Log Message:
 Pull up following revision(s) (requested by jakllsch in ticket #1308):

 	sys/dev/pci/if_wpi.c: revision 1.86

 Put back correct recieve ring allocation size which was lost just over
 five years ago mae culpa.

 Found by msaitoh@

 Should fix PR kern/54320 once pulled up.


 To generate a diff of this commit:
 cvs rdiff -u -r1.78.2.1 -r1.78.2.2 src/sys/dev/pci/if_wpi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.