Put back correct recieve ring allocation size which was lost just over five years ago mae culpa.

Found by msaitoh@

Should fix PR kern/54320 once pulled up.