sys/dev/pci/if_wpi.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: if_wpi.c,v 1.85 2018/12/22 14:07:53 maxv Exp $	*/
+/*	$NetBSD: if_wpi.c,v 1.86 2019/06/24 13:57:30 jakllsch Exp $	*/
 
 /*-
  * Copyright (c) 2006, 2007
@@ -18,7 +18,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: if_wpi.c,v 1.85 2018/12/22 14:07:53 maxv Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_wpi.c,v 1.86 2019/06/24 13:57:30 jakllsch Exp $");
 
 /*
  * Driver for Intel PRO/Wireless 3945ABG 802.11 network adapters.
@@ -671,7 +671,7 @@ wpi_alloc_rx_ring(struct wpi_softc *sc, struct wpi_rx_ring *ring)
 
 	ring->cur = 0;
 
-	size = WPI_RX_RING_COUNT * sizeof (uint32_t);
+	size = WPI_RX_RING_COUNT * sizeof (struct wpi_rx_desc);
 	error = wpi_dma_contig_alloc(sc->sc_dmat, &ring->desc_dma,
 	    (void **)&ring->desc, size,
 	    WPI_RING_DMA_ALIGN, BUS_DMA_NOWAIT);
